main
====
Cursors (class hierarchy revised to accommodate `find_and_rerank`, plus other changes):
    - renamed the 'FindCursorState' enum to `CursorState`
    - renamed the abstract ur-class 'FindCursor' => `AbstractCursor`
    - `clone` method does not strip the mapping anymore, rather retains it
    - removed the `alive` sugar property (use `cursors.state != CursorState.CLOSED`)
Support for findAndRerank in collections:
    - new classes `CollectionLexicalOptions`, `CollectionRerankingOptions`, `RerankingServiceOptions` for create_collection
    - new `lexical` and `reranking` entries in CollectionDefinition (+builder interface management)
    - `find_and_rerank` method for collections
    - cursor classes `[Async]CollectionFindAndRerankCursor` added
    - findAndRerank cursors return the new `RerankedResult` construct by default (modulo custom mappings)
Maps for tables expressed as list of pairs (association lists):
    - support for automatic handling of DataAPIMaps (+possibly dicts) in the proper table payload portions
    - introduced serdes option `encode_maps_as_lists_in_tables` (default to "NEVER") to control this
Exceptions, major rework of `[Table|Collection]InsertManyException`, `CollectionUpdateManyException` and `CollectionDeleteManyException`
    - All astrapy exceptions derive directly from `Exception` (and not 'ValueError` anymore)
    - better string representation of `DataAPIDetailedErrorDescriptor`
    - `DataAPIDetailedErrorDescriptor` removed.
    - 'CumulativeOperationException` removed.
    - The four `CollectionInsertManyException`, `CollectionUpdateManyException`, `CollectionDeleteManyException`, `TableInsertManyException` classes now inherit directly from `DataAPIResponseException`.
    - New semantics and structure for `[Collection|Table]InsertManyException`: they have members `inserted_ids`(/`inserted_id_tuples`) and an `exceptions` list for the root cause(s)