@@ -589,8 +589,12 @@ from astrapy.info import (
     AlterTableAddVectorize,
     AlterTableDropColumns,
     AlterTableDropVectorize,
+    AstraDBAdminDatabaseInfo,
+    AstraDBDatabaseInfo,
     CollectionDefaultIDOptions,
     CollectionDefinition,
+    CollectionDescriptor,
+    CollectionInfo,
     CollectionLexicalOptions,
     CollectionRerankingOptions,
     CollectionVectorOptions,
@@ -601,15 +605,29 @@ from astrapy.info import (
     EmbeddingProviderModel,
     EmbeddingProviderParameter,
     EmbeddingProviderToken,
+    FindEmbeddingProvidersResult,
+    FindRerankingProvidersResult,
+    ListTableDefinition,
+    ListTableDescriptor,
+    RerankingProvider,
+    RerankingProviderAuthentication,
+    RerankingProviderModel,
+    RerankingProviderParameter,
+    RerankingProviderToken,
     RerankingServiceOptions,
+    TableAPIIndexSupportDescriptor,
+    TableAPISupportDescriptor,
     TableBaseIndexDefinition,
     TableIndexDefinition,
+    TableIndexDescriptor,
     TableIndexOptions,
+    TableInfo,
     TableKeyValuedColumnType,
     TableKeyValuedColumnTypeDescriptor,
     TablePrimaryKeyDescriptor,
     TableScalarColumnTypeDescriptor,
     TableUnsupportedColumnTypeDescriptor,
+    TableUnsupportedIndexDefinition,
     TableValuedColumnType,
     TableValuedColumnTypeDescriptor,
     TableVectorColumnTypeDescriptor,
