@@ -169,8 +169,14 @@ def test_imports() -> None:
         EmbeddingProviderParameter,
         EmbeddingProviderToken,
         FindEmbeddingProvidersResult,
+        FindRerankingProvidersResult,
         ListTableDefinition,
         ListTableDescriptor,
+        RerankingProvider,
+        RerankingProviderAuthentication,
+        RerankingProviderModel,
+        RerankingProviderParameter,
+        RerankingProviderToken,
         RerankingServiceOptions,
         TableAPIIndexSupportDescriptor,
         TableAPISupportDescriptor,
